CHATS_SIT/force-app/main/default/objects/T_APPLN_PRCS_QUEUE__c.object
<CustomObject>
    <description>Track PEAK application processing</description>
    <fields>
        <fullName>CDE_COUNTY__c</fullName>
        <description>County</description>
        <label>County</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_County__c</fullName>
        <formula>IF(  TEXT(County_Name__r.CDE_COUNTY__c)  = TEXT($User.Owner_County__c), 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User County</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CDE_REASON_CNCLN__c</fullName>
        <label>Reason for Cancellation</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_REJECT_APPLN__c</fullName>
        <label>Reason for Application Rejection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00823</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_REJECT_REFER__c</fullName>
        <label>Reason for Referral Rejection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate Referral</fullName>
                </value>
                <value>
                    <fullName>Processed as Paper Referral</fullName>
                </value>
                <value>
                    <fullName>Case already LI</fullName>
                </value>
                <value>
                    <fullName>Case closed (transition not needed)</fullName>
                </value>
                <value>
                    <fullName>No active case in CHATS (closure not needed)</fullName>
                </value>
                <value>
                    <fullName>No active case in CHATS (change not needed)</fullName>
                </value>
                <value>
                    <fullName>Case update already reported by client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_SOURCE__c</fullName>
        <description>Application Source</description>
        <label>Application Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00834</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_STATUS_APPLN__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00553</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_STATUS_TFR__c</fullName>
        <description>Appliction Transfer Status</description>
        <label>Appliction Transfer Status</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_TYPE_APPLN__c</fullName>
        <description>Application Type</description>
        <label>Application Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_Transfer_Notes__c</fullName>
        <label>County Transfer Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DTE_RCVD_APPLN__c</fullName>
        <description>Application Received Date</description>
        <label>Application Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_RCVD_REF__c</fullName>
        <label>DTE_RCVD_REF</label>
        <type>Date</type>
    </fields> 
    <fields>
        <fullName>DTE_PRCSD_APPLN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Processed Date</label>
        <type>Date</type>
    </fields>   
    <fields>
        <fullName>PAPER_AUTOGENERATED_ID__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>PAPER AUTOGENERATED ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>DTE_REVIEW__c</fullName>
        <description>DTE_REVIEW</description>
        <label>DTE_REVIEW</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_APPLN_COMPASS__c</fullName>
        <label>IDN_APPLN_COMPASS</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_APPLN__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Application Number</description>
        <label>Application Number</label>
        <referenceTo>T_APPLN_CASE__c</referenceTo>
        <relationshipLabel>Application Process Queue</relationshipLabel>
        <relationshipName>Application_case_26</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_CASE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case ID</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Application Process Queues</relationshipLabel>
        <relationshipName>Application_Process_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_OFFICE__c</fullName>
        <description>IDN_OFFICE</description>
        <label>IDN_OFFICE</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_USER_REVIEW__c</fullName>
        <description>IDN_USER_REVIEW</description>
        <label>IDN_USER_REVIEW</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_TANF_REF_FORM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IND_TANF_REF_FORM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AUTO_UPDATE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AUTO_UPDATE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IND_WORKER_REVIEW_CCIS__c</fullName>
        <description>IND_WORKER_REVIEW_CCIS</description>
        <label>IND_WORKER_REVIEW_CCIS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBR_SEQ_WRKLD__c</fullName>
        <description>NBR_SEQ_WRKLD</description>
        <label>NBR_SEQ_WRKLD</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TXT_DETAIL_APPLN_XML__c</fullName>
        <description>TXT_DETAIL_APPLN_XML</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>TXT_DETAIL_APPLN_XML</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>County_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>County Name</label>
        <referenceTo>T_COUNTY__c</referenceTo>
        <relationshipLabel>Application Process Queues</relationshipLabel>
        <relationshipName>Application_Process_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedDate_DateValue__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <label>Created Date (Date Value)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDE_REJECT_NOTES__c</fullName>
        <description>Required for some values in Reason for Rejection</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Rejection Reason Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PEAK_bypass_CaseID_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true &apos;PEAK_CaseID_Required&apos; validation rule is bypassed. Updated via &apos;APXPeakApplicationToCaseController&apos; class.</description>
        <label>PEAK_bypass_CaseID_Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDE_AUTO_PROCESS_NOTES__c</fullName>
        <description>Project 507, JIRA CCCAP-7696</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Auto processed Referral Notes</inlineHelpText>
        <label>Auto processed Referral Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incorrect_Information_Needed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Incorrect Information Needed</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process_Referral_State__c</fullName>
        <formula>IF( 
    AND (
    TEXT(CDE_SOURCE__c) ==&apos;CB&apos; ,
    NOT(ISPICKVAL(CDE_STATUS_APPLN__c,&apos;REJ&apos;)),
    NOT(ISPICKVAL(CDE_STATUS_APPLN__c,&apos;PRC&apos;)),
    NOT(ISPICKVAL(CDE_STATUS_APPLN__c,&apos;INC&apos;))
    ),
    IF( AND(County_Name__c !=null, IDN_APPLN__r.CDE_CBMS_REF_TYP__c == &apos;New&apos;),&quot;New&quot;,
    IF( AND(County_Name__c !=null, IDN_CASE__c!=null,  OR(IDN_APPLN__r.CDE_CBMS_REF_TYP__c == &apos;Renewal&apos;, IDN_APPLN__r.CDE_CBMS_REF_TYP__c == &apos;Change&apos;)),&quot;Change&quot;,
    IF( AND(IDN_CASE__c=null, IDN_APPLN__r.CDE_CBMS_REF_TYP__c != &apos;New&apos;),&quot;ReferralToCase&quot;,
    IF( AND(County_Name__c !=null, IDN_CASE__c!=null,  OR(IDN_APPLN__r.CDE_CBMS_REF_TYP__c == &apos;Transition&apos;, IDN_APPLN__r.CDE_CBMS_REF_TYP__c == &apos;Closure&apos;) ) , &quot;Transitional&quot;,&quot;NA&quot;)))),&quot;NA&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Referral State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reverse_Refer_Track__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reverse Refer Track</label>
        <description>This field is used for marked a Referral rejected that needs to be send in next file to CBMS.</description>
    <type>Checkbox</type>
    </fields>
    <label>Application Process Queue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>IDN_APPLN__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CDE_SOURCE__c</field>
            <operation>equals</operation>
            <value>PA</value>
        </filters>
        <filters>
            <field>IDN_CASE__c</field>
            <operation>equals</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>CDE_STATUS_APPLN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Unprocessed</fullName>
        <columns>NAME</columns>
        <columns>CDE_STATUS_APPLN__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>DTE_RCVD_APPLN__c</columns>
        <columns>IDN_CASE__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CDE_SOURCE__c</field>
            <operation>equals</operation>
            <value>PK</value>
        </filters>
        <filters>
            <field>CDE_STATUS_APPLN__c</field>
            <operation>notEqual</operation>
            <value>REJ,PRC</value>
        </filters>
        <label>All - Peak Unprocessed</label>
    </listViews>
    <listViews>
        <fullName>Adams_Unprocessed</fullName>
        <columns>NAME</columns>
        <columns>IDN_APPLN_COMPASS__c</columns>
        <columns>CDE_STATUS_APPLN__c</columns>
        <columns>DTE_RCVD_APPLN__c</columns>
        <columns>CDE_SOURCE__c</columns>
        <columns>IDN_CASE__c</columns>
        <columns>County_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>County_Name__c</field>
            <operation>equals</operation>
            <value>Adams</value>
        </filters>
        <filters>
            <field>CDE_STATUS_APPLN__c</field>
            <operation>notEqual</operation>
            <value>REJ,PRC</value>
        </filters>
	<filters>
            <field>CDE_SOURCE__c</field>
            <operation>equals</operation>
            <value>PK</value>
        </filters>
        <label>Adams - Peak Unprocessed</label>
    </listViews>
    <listViews>
        <fullName>Alamosa_Unprocessed</fullName>
        <columns>NAME</columns>
        <columns>IDN_APPLN_COMPASS__c</columns>
        <columns>CDE_STATUS_APPLN__c</columns>
        <columns>DTE_RCVD_APPLN__c</columns>
        <columns>CDE_SOURCE__c</columns>
        <columns>IDN_CASE__c</columns>
        <columns>County_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>County_Name__c</field>
            <operation>equals</operation>
            <value>Alamosa</value>
        </filters>
        <filters>
            <field>CDE_STATUS_APPLN__c</field>
            <operation>notEqual</operation>
            <value>REJ,PRC</value>
        </filters>
	<filters>
            <field>CDE_SOURCE__c</field>
            <operation>equals</operation>
            <value>PK</value>
        </filters>
        <label>Alamosa - Peak Unprocessed</label>
    </listViews>
	<listViews>
        <fullName>Arapahoe_Unprocessed</fullName>
        <columns>NAME</columns>
        <columns>IDN_APPLN_COMPASS__c</columns>
        <columns>CDE_STATUS_APPLN__c</columns>
        <columns>DTE_RCVD_APPLN__c</columns>
        <columns>CDE_SOURCE__c</columns>
        <columns>IDN_CASE__c</columns>
        <columns>County_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>County_Name__c</field>
            <operation>equals</operation>
            <value>Arapahoe</value>
        </filters>
        <filters>
            <field>CDE_STATUS_APPLN__c</field>
            <operation>notEqual</operation>
            <value>REJ,PRC</value>
        </filters>
	<filters>
            <field>CDE_SOURCE__c</field>
            <operation>equals</operation>
            <value>PK</value>
        </filters>
        <label>Arapahoe - Peak Unprocessed</label>
    </listViews>
		<listViews>
        <fullName>Archuleta_Unprocessed</fullName>
        <columns>NAME</columns>
        <columns>IDN_APPLN_COMPASS__c</columns>
        <columns>CDE_STATUS_APPLN__c</columns>
        <columns>DTE_RCVD_APPLN__c</columns>
        <columns>CDE_SOURCE__c</columns>
        <columns>IDN_CASE__c</columns>
        <columns>County_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>County_Name__c</field>
            <operation>equals</operation>
            <value>Archuleta</value>
        </filters>
        <filters>
            <field>CDE_STATUS_APPLN__c</field>
            <operation>notEqual</operation>
            <value>REJ,PRC</value>
        </filters>
	<filters>
            <field>CDE_SOURCE__c</field>
            <operation>equals</operation>
            <value>PK</value>
        </filters>
        <label>Archuleta - Peak Unprocessed</label>
    </listViews>
		<listViews>
        <fullName>Baca_Unprocessed</fullName>
        <columns>NAME</columns>
        <columns>IDN_APPLN_COMPASS__c</columns>
        <columns>CDE_STATUS_APPLN__c</columns>
        <columns>DTE_RCVD_APPLN__c</columns>
        <columns>CDE_SOURCE__c</columns>
        <columns>IDN_CASE__c</columns>
        <columns>County_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>County_Name__c</field>
            <operation>equals</operation>
            <value>Baca</value>
        </filters>
        <filters>
            <field>CDE_STATUS_APPLN__c</field>
            <operation>notEqual</operation>
            <value>REJ,PRC</value>
        </filters>
	<filters>
            <field>CDE_SOURCE__c</field>
            <operation>equals</operation>
            <value>PK</value>
        </filters>
        <label>Baca - Peak Unprocessed</label>
    </listViews>
		<listViews>
        <fullName>Bent_Unprocessed</fullName>
        <columns>NAME</columns>
        <columns>IDN_APPLN_COMPASS__c</columns>
        <columns>CDE_STATUS_APPLN__c</columns>
        <columns>DTE_RCVD_APPLN__c</columns>
        <columns>CDE_SOURCE__c</columns>
        <columns>IDN_CASE__c</columns>
        <columns>County_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>County_Name__c</field>
            <operation>equals</operation>
            <value>Bent</value>
        </filters>
        <filters>
            <field>CDE_STATUS_APPLN__c</field>
            <operation>notEqual</operation>
            <value>REJ,PRC</value>
        </filters>
	<filters>
            <field>CDE_SOURCE__c</field>
            <operation>equals</operation>
            <value>PK</value>
        </filters>
        <label>Bent - Peak Unprocessed</label>
    </listViews>
		<listViews>
        <fullName>Boulder_Unprocessed</fullName>
        <columns>NAME</columns>
        <columns>IDN_APPLN_COMPASS__c</columns>
        <columns>CDE_STATUS_APPLN__c</columns>
        <columns>DTE_RCVD_APPLN__c</columns>
        <columns>CDE_SOURCE__c</columns>
        <columns>IDN_CASE__c</columns>
        <columns>County_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>County_Name__c</field>
            <operation>equals</operation>
            <value>Boulder</value>
        </filters>
        <filters>
            <field>CDE_STATUS_APPLN__c</field>
            <operation>notEqual</operation>
            <value>REJ,PRC</value>
        </filters>
	<filters>
            <field>CDE_SOURCE__c</field>
            <operation>equals</operation>
            <value>PK</value>
        </filters>
        <label>Boulder - Peak Unprocessed</label>
    </listViews>
		<listViews>
        <fullName>Broomfield_Unprocessed</fullName>
        <columns>NAME</columns>
        <columns>IDN_APPLN_COMPASS__c</columns>
        <columns>CDE_STATUS_APPLN__c</columns>
        <columns>DTE_RCVD_APPLN__c</columns>
        <columns>CDE_SOURCE__c</columns>
        <columns>IDN_CASE__c</columns>
        <columns>County_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>County_Name__c</field>
            <operation>equals</operation>
            <value>Broomfield</value>
        </filters>
        <filters>
            <field>CDE_STATUS_APPLN__c</field>
            <operation>notEqual</operation>
            <value>REJ,PRC</value>
        </filters>
	<filters>
            <field>CDE_SOURCE__c</field>
            <operation>equals</operation>
            <value>PK</value>
        </filters>
        <label>Broomfield - Peak Unprocessed</label>
    </listViews>
		<listViews>
        <fullName>Chaffee_Unprocessed</fullName>
        <columns>NAME</columns>
        <columns>IDN_APPLN_COMPASS__c</columns>
        <columns>CDE_STATUS_APPLN__c</columns>
        <columns>DTE_RCVD_APPLN__c</columns>
        <columns>CDE_SOURCE__c</columns>
        <columns>IDN_CASE__c</columns>
        <columns>County_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>County_Name__c</field>
            <operation>equals</operation>
            <value>Chaffee</value>
        </filters>
        <filters>
            <field>CDE_STATUS_APPLN__c</field>
            <operation>notEqual</operation>
            <value>REJ,PRC</value>
        </filters>
	<filters>
            <field>CDE_SOURCE__c</field>
            <operation>equals</operation>
            <value>PK</value>
        </filters>
        <label>Chaffee - Peak Unprocessed</label>
    </listViews>
		<listViews>
        <fullName>Cheyenne_Unprocessed</fullName>
        <columns>NAME</columns>
        <columns>IDN_APPLN_COMPASS__c</columns>
        <columns>CDE_STATUS_APPLN__c</columns>
        <columns>DTE_RCVD_APPLN__c</columns>
        <columns>CDE_SOURCE__c</columns>
        <columns>IDN_CASE__c</columns>
        <columns>County_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>County_Name__c</field>
            <operation>equals</operation>
            <value>Cheyenne</value>
        </filters>
        <filters>
            <field>CDE_STATUS_APPLN__c</field>
            <operation>notEqual</operation>
            <value>REJ,PRC</value>
        </filters>
	<filters>
            <field>CDE_SOURCE__c</field>
            <operation>equals</operation>
            <value>PK</value>
        </filters>
        <label>Cheyenne - Peak Unprocessed</label>
    </listViews>
		<listViews>
        <fullName>Clear_Creek_Unprocessed</fullName>
        <columns>NAME</columns>
        <columns>IDN_APPLN_COMPASS__c</columns>
        <columns>CDE_STATUS_APPLN__c</columns>
        <columns>DTE_RCVD_APPLN__c</columns>
        <columns>CDE_SOURCE__c</columns>
        <columns>IDN_CASE__c</columns>
        <columns>County_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>County_Name__c</field>
            <operation>equals</operation>
            <value>Clear Creek</value>
        </filters>
        <filters>
            <field>CDE_STATUS_APPLN__c</field>
            <operation>notEqual</operation>
            <value>REJ,PRC</value>
        </filters>
	<filters>
            <field>CDE_SOURCE__c</field>
            <operation>equals</operation>
            <value>PK</value>
        </filters>
        <label>Clear Creek - Peak Unprocessed</label>
    </listViews>
		<listViews>
        <fullName>Conejos_Unprocessed</fullName>
        <columns>NAME</columns>
        <columns>IDN_APPLN_COMPASS__c</columns>
        <columns>CDE_STATUS_APPLN__c</columns>
        <columns>DTE_RCVD_APPLN__c</columns>
        <columns>CDE_SOURCE__c</columns>
        <columns>IDN_CASE__c</columns>
        <columns>County_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>County_Name__c</field>
            <operation>equals</operation>
            <value>Conejos</value>
        </filters>
        <filters>
            <field>CDE_STATUS_APPLN__c</field>
            <operation>notEqual</operation>
            <value>REJ,PRC</value>
        </filters>
	<filters>
            <field>CDE_SOURCE__c</field>
            <operation>equals</operation>
            <value>PK</value>
        </filters>
        <label>Conejos - Peak Unprocessed</label>
    </listViews>
    <nameField>
        <displayFormat>APRCS_QUEUE-{0}</displayFormat>
        <label>Application Process Queue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Process Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>cannot_chng_county_if_source_paper</fullName>
        <active>true</active>
        <description>CHAT-1140: &quot;Read-only
If user has completed intake for a paper application (from the flow), populate with the CDE_COUNTY from T_SBSD_CASE&quot;</description>
        <errorConditionFormula>AND( NOT(ISNEW()),
     ISPICKVAL(CDE_SOURCE__c, &quot;PA&quot;),  ISCHANGED( CDE_COUNTY__c ) 
)</errorConditionFormula>
        <errorDisplayField>CDE_COUNTY__c</errorDisplayField>
        <errorMessage>Cannot update County if Application Source is Paper.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CBMS_Reason_of_Rejection_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(CDE_SOURCE__c, &apos;CB&apos;) ,NOT(ISPICKVAL( CDE_REJECT_APPLN__c,&apos;&apos;))  )</errorConditionFormula>
        <errorMessage>Please select appropriate Reason for Rejection.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PEAK_Reason_of_Rejection_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(CDE_SOURCE__c, &apos;PK&apos;) , NOT(ISPICKVAL( CDE_REJECT_REFER__c,&apos;&apos;)) )</errorConditionFormula>
        <errorMessage>Please select appropriate Reason for Rejection.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cannot_chng_reason_cncln_if_source_paper</fullName>
        <active>true</active>
        <description>CHAT-1141: If user has completed intake for a paper application (from the flow), don&apos;t allow user to enter data into this field</description>
        <errorConditionFormula>AND( NOT(ISNEW()),
     ISPICKVAL(CDE_SOURCE__c, &quot;PA&quot;),
     ISCHANGED( CDE_REJECT_APPLN__c) 
)</errorConditionFormula>
     <errorDisplayField>CDE_REJECT_APPLN__c</errorDisplayField>
        <errorMessage>cannot update Reason for Rejection if it is paper application</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CntyTransferNotes_Req_when_Upd_County</fullName>
        <active>true</active>
        <description>County Transfer Notes is required when County is updated</description>
        <errorConditionFormula>AND(
 NOT(ISNEW()),
 ISPICKVAL(CDE_SOURCE__c, &apos;PK&apos;),
 ISCHANGED(County_Name__c ),
 OR(
  ISBLANK(County_Transfer_Notes__c),
  NOT(ISCHANGED(County_Transfer_Notes__c))
 )
)</errorConditionFormula>
        <errorDisplayField>County_Transfer_Notes__c</errorDisplayField>
        <errorMessage>County Transfer Notes is required when County is updated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PEAK_CaseID_Required</fullName>
        <active>true</active>
        <description>Required for certain values in Reason for Rejection field for PEAK</description>
        <errorConditionFormula>AND(
 ISPICKVAL(CDE_SOURCE__c, &apos;PK&apos;),
 ISBLANK(IDN_CASE__c), 
 OR(
  ISPICKVAL(CDE_REJECT_APPLN__c, &apos;3&apos;),
  ISPICKVAL(CDE_REJECT_APPLN__c, &apos;1&apos;)
 )
)</errorConditionFormula>
        <errorDisplayField>IDN_CASE__c</errorDisplayField>
        <errorMessage>Please enter appropriate Case ID.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PEAK_RejectionReasonNotes_Required</fullName>
        <active>true</active>
        <description>Required for certain values in Reason for Rejection field for PEAK</description>
        <errorConditionFormula>AND(
 ISPICKVAL(CDE_SOURCE__c, &apos;PK&apos;),
 ISBLANK(CDE_REJECT_NOTES__c), 
 OR(
  ISPICKVAL(CDE_REJECT_APPLN__c, &apos;3&apos;),
  ISPICKVAL(CDE_REJECT_APPLN__c, &apos;1&apos;)
 )
)</errorConditionFormula>
        <errorDisplayField>CDE_REJECT_NOTES__c</errorDisplayField>
        <errorMessage>Please enter appropriate notes for rejection.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PEAK_CaseID_Restricted</fullName>
        <active>true</active>
        <description>Prevent a user from entering a Case ID if its not required to enter.</description>
        <errorConditionFormula>AND(
 ISCHANGED(IDN_CASE__c),
 NOT(ISPICKVAL(CDE_REJECT_APPLN__c, &quot;1&quot;)),
 NOT(ISPICKVAL(CDE_REJECT_APPLN__c, &quot;3&quot;)),
 ISPICKVAL(CDE_SOURCE__c, &quot;PK&quot;),
 PEAK_bypass_CaseID_Validation__c == false
)</errorConditionFormula>
        <errorDisplayField>IDN_CASE__c</errorDisplayField>
        <errorMessage>Please do not enter Case ID unless PEAK Application is in Rejected status.</errorMessage>
    </validationRules>
</CustomObject>