CHATS_SIT/force-app/main/default/objects/T_APPLN_PRCS_QUEUE__c/validationRules/cannot_chng_county_if_source_paper.validationRule-meta.xml
<ValidationRule>
    <fullName>cannot_chng_county_if_source_paper</fullName>
    <active>true</active>
    <description>CHAT-1140: &quot;Read-only
If user has completed intake for a paper application (from the flow), populate with the CDE_COUNTY from T_SBSD_CASE&quot;</description>
    <errorConditionFormula>AND( NOT(ISNEW()),
     ISPICKVAL(CDE_SOURCE__c, &quot;PA&quot;),  ISCHANGED( CDE_COUNTY__c ) 
)</errorConditionFormula>
    <errorDisplayField>CDE_COUNTY__c</errorDisplayField>
    <errorMessage>Cannot update County if Application Source is Paper.</errorMessage>
</ValidationRule>