CHATS_SIT/force-app/main/default/objects/T_APPLN_PRCS_QUEUE__c/validationRules/cannot_chng_reason_cncln_if_source_paper.validationRule-meta.xml
<ValidationRule>
    <fullName>cannot_chng_reason_cncln_if_source_paper</fullName>
    <active>true</active>
    <description>CHAT-1141: If user has completed intake for a paper application (from the flow), don&apos;t allow user to enter data into this field</description>
    <errorConditionFormula>AND( NOT(ISNEW()),
     ISPICKVAL(CDE_SOURCE__c, &quot;PA&quot;),
     ISCHANGED( CDE_REJECT_APPLN__c) 
)</errorConditionFormula>
    <errorDisplayField>CDE_REJECT_APPLN__c</errorDisplayField>
    <errorMessage>cannot update Reason for Rejection if it is paper application</errorMessage>
</ValidationRule>