CHATS_SIT/force-app/main/default/objects/T_APPLN_PRCS_QUEUE__c/validationRules/CBMS_Reason_of_Rejection_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CBMS_Reason_of_Rejection_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(CDE_SOURCE__c, &apos;CB&apos;) ,NOT(ISPICKVAL( CDE_REJECT_APPLN__c,&apos;&apos;))  )</errorConditionFormula>
    <errorMessage>Please select appropriate Reason for Rejection.</errorMessage>
</ValidationRule>