CHATS_SIT/force-app/main/default/objects/T_APPLN_PRCS_QUEUE__c/validationRules/CntyTransferNotes_Req_when_Upd_County.validationRule-meta.xml
<ValidationRule>
    <fullName>CntyTransferNotes_Req_when_Upd_County</fullName>
    <active>true</active>
    <description>County Transfer Notes is required when County is updated</description>
    <errorConditionFormula>AND(
 NOT(ISNEW()),
 ISPICKVAL(CDE_SOURCE__c, &apos;PK&apos;),
 ISCHANGED(County_Name__c ),
 OR(
  ISBLANK(County_Transfer_Notes__c),
  NOT(ISCHANGED(County_Transfer_Notes__c))
 )
)</errorConditionFormula>
    <errorDisplayField>County_Transfer_Notes__c</errorDisplayField>
    <errorMessage>County Transfer Notes is required when County is updated</errorMessage>
</ValidationRule>