CHATS_SIT/force-app/main/default/objects/T_APPLN_PRCS_QUEUE__c/validationRules/PEAK_CaseID_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>PEAK_CaseID_Required</fullName>
    <active>true</active>
    <description>Required for certain values in Reason for Rejection field for PEAK</description>
    <errorConditionFormula>AND(
 ISPICKVAL(CDE_SOURCE__c, &apos;PK&apos;),
 ISBLANK(IDN_CASE__c), 
 OR(
  ISPICKVAL(CDE_REJECT_APPLN__c, &apos;3&apos;),
  ISPICKVAL(CDE_REJECT_APPLN__c, &apos;1&apos;)
 )
)</errorConditionFormula>
    <errorDisplayField>IDN_CASE__c</errorDisplayField>
    <errorMessage>Please enter appropriate Case ID.</errorMessage>
</ValidationRule>