CHATS_SIT/force-app/main/default/objects/T_APPLN_PRCS_QUEUE__c/validationRules/PEAK_CaseID_Restricted.validationRule-meta.xml
<ValidationRule>
    <fullName>PEAK_CaseID_Restricted</fullName>
    <active>true</active>
    <description>Prevent a user from entering a Case ID if its not required to enter.</description>
    <errorConditionFormula>AND(
 ISCHANGED(IDN_CASE__c),
 NOT(ISPICKVAL(CDE_REJECT_APPLN__c, &quot;1&quot;)),
 NOT(ISPICKVAL(CDE_REJECT_APPLN__c, &quot;3&quot;)),
 ISPICKVAL(CDE_SOURCE__c, &quot;PK&quot;),
 PEAK_bypass_CaseID_Validation__c == false
)</errorConditionFormula>
    <errorDisplayField>IDN_CASE__c</errorDisplayField>
    <errorMessage>Please do not enter Case ID unless PEAK Application is in Rejected status.</errorMessage>
</ValidationRule>