CHATS_SIT/force-app/main/default/objects/T_APPLN_PRCS_QUEUE__c/listViews/Adams.listView-meta.xml
<ListView>
    <fullName>Adams</fullName>
    <columns>NAME</columns>
    <columns>IDN_APPLN_COMPASS__c</columns>
    <columns>CDE_STATUS_APPLN__c</columns>
    <columns>DTE_RCVD_APPLN__c</columns>
    <columns>CDE_SOURCE__c</columns>
    <columns>IDN_CASE__c</columns>
    <columns>County_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>County_Name__c</field>
        <operation>equals</operation>
        <value>Adams</value>
    </filters>
    <label>Adams</label>
</ListView>