CHATS_SIT/force-app/main/default/objects/T_APPLN_PRCS_QUEUE__c/listViews/Adams_CBMS_Referrals_Unprocessed.listView-meta.xml
<ListView>
    <fullName>Adams_CBMS_Referrals_Unprocessed</fullName>
    <columns>NAME</columns>
    <columns>IDN_APPLN_COMPASS__c</columns>
    <columns>CDE_STATUS_APPLN__c</columns>
    <columns>DTE_RCVD_APPLN__c</columns>
    <columns>CDE_SOURCE__c</columns>
    <columns>IDN_CASE__c</columns>
    <columns>County_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>County_Name__c</field>
        <operation>equals</operation>
        <value>Adams</value>
    </filters>
    <filters>
        <field>CDE_STATUS_APPLN__c</field>
        <operation>notEqual</operation>
        <value>REJ,PRC</value>
    </filters>
    <filters>
        <field>CDE_SOURCE__c</field>
        <operation>equals</operation>
        <value>CB</value>
    </filters>
    <label>Adams - CBMS Referrals Unprocessed</label>
</ListView>